# serde_dynamo

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: check.yml
src/: attribute_value.rs  binary_set.rs  error.rs  lib.rs  number_set.rs  set.rs  string_set.rs  test_attribute_value.rs  tests.rs
src/aws_sdk_dynamodb/: mod.rs  tests.rs
src/de/: deserializer.rs  deserializer_bytes.rs  deserializer_enum.rs  deserializer_map.rs  deserializer_number.rs  deserializer_seq.rs  mod.rs  tests.rs
src/generic/: mod.rs
src/generic/de/: deserializer.rs  deserializer_bytes.rs  deserializer_map.rs  deserializer_number.rs  deserializer_seq.rs  mod.rs  tests.rs
src/generic/ser/: mod.rs  serializer.rs  serializer_map.rs  serializer_struct.rs  serializer_struct_variant.rs  tests.rs
src/macros/: aws_lambda_events.rs  aws_sdk.rs  aws_sdk_before_0_35.rs  aws_sdk_streams.rs  mod.rs  rusoto.rs  rusoto_streams.rs
src/rusoto_dynamodb/: mod.rs
src/ser/: mod.rs  serializer.rs  serializer_map.rs  serializer_seq.rs  serializer_struct.rs  serializer_struct_variant.rs  serializer_tuple_variant.rs  tests.rs
src/set/: bytes.rs  mod.rs  numbers.rs  strings.rs
