[package]
name = "serde_dynamo"
version = "3.0.3"
authors = ["Bryan Burgers <bryan@burgers.io>"]
edition = "2021"
license = "MIT"
description = "serde serializer/deserializer for DynamoDB items"
readme = "README.md"
documentation = "https://docs.rs/serde_dynamo"
homepage = "https://github.com/zenlist/serde_dynamo"
repository = "https://github.com/zenlist/serde_dynamo"
keywords = ["serde", "rusoto", "dynamodb", "dynamo", "serde_dynamodb"]

[dependencies]
__aws_sdk_dynamodb_0_7 = { package = "aws-sdk-dynamodb", version = "0.7", default-features = false, optional = true }
__aws_sdk_dynamodb_0_8 = { package = "aws-sdk-dynamodb", version = "0.8", default-features = false, optional = true }
__aws_sdk_dynamodb_0_9 = { package = "aws-sdk-dynamodb", version = "0.9", default-features = false, optional = true }
__aws_sdk_dynamodb_0_10 = { package = "aws-sdk-dynamodb", version = "0.10", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_8 = { package = "aws-sdk-dynamodbstreams", version = "0.8", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_9 = { package = "aws-sdk-dynamodbstreams", version = "0.9", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_10 = { package = "aws-sdk-dynamodbstreams", version = "0.10", default-features = false, optional = true }
__rusoto_dynamodb_0_46 = { package = "rusoto_dynamodb", version = "0.46", default-features = false, optional = true }
__rusoto_dynamodb_0_47 = { package = "rusoto_dynamodb", version = "0.47", default-features = false, optional = true }
__rusoto_dynamodb_0_48 = { package = "rusoto_dynamodb", version = "0.48", default-features = false, optional = true }
__rusoto_dynamodbstreams_0_46 = { package = "rusoto_dynamodbstreams", version = "0.46", default-features = false, optional = true }
__rusoto_dynamodbstreams_0_47 = { package = "rusoto_dynamodbstreams", version = "0.47", default-features = false, optional = true }
__rusoto_dynamodbstreams_0_48 = { package = "rusoto_dynamodbstreams", version = "0.48", default-features = false, optional = true }
serde = "1"

__rusoto_core_0_46_crate = { package = "rusoto_core", version = "0.46", default-features = false, features = ["rustls"], optional = true }
__rusoto_core_0_47_crate = { package = "rusoto_core", version = "0.47", default-features = false, features = ["rustls"], optional = true }
__rusoto_core_0_48_crate = { package = "rusoto_core", version = "0.48", default-features = false, features = ["rustls"], optional = true }

[features]
"aws-sdk-dynamodb+0_7" = ["__aws_sdk_dynamodb_0_7"]
"aws-sdk-dynamodb+0_8" = ["__aws_sdk_dynamodb_0_8"]
"aws-sdk-dynamodb+0_9" = ["__aws_sdk_dynamodb_0_9"]
"aws-sdk-dynamodb+0_10" = ["__aws_sdk_dynamodb_0_10"]
"aws-sdk-dynamodbstreams+0_8" = ["__aws_sdk_dynamodbstreams_0_8"]
"aws-sdk-dynamodbstreams+0_9" = ["__aws_sdk_dynamodbstreams_0_9"]
"aws-sdk-dynamodbstreams+0_10" = ["__aws_sdk_dynamodbstreams_0_10"]
"rusoto_dynamodb+0_46" = ["__rusoto_dynamodb_0_46"]
"rusoto_dynamodb+0_47" = ["__rusoto_dynamodb_0_47"]
"rusoto_dynamodb+0_48" = ["__rusoto_dynamodb_0_48"]
"rusoto_dynamodbstreams+0_46" = ["__rusoto_dynamodbstreams_0_46"]
"rusoto_dynamodbstreams+0_47" = ["__rusoto_dynamodbstreams_0_47"]
"rusoto_dynamodbstreams+0_48" = ["__rusoto_dynamodbstreams_0_48"]

__doc = [
	"__rusoto_core_0_46_crate",
	"__rusoto_core_0_47_crate",
	"__rusoto_core_0_48_crate",
	"aws-sdk-dynamodb+0_7",
	"aws-sdk-dynamodb+0_8",
	"aws-sdk-dynamodb+0_9",
	"aws-sdk-dynamodb+0_10",
	"aws-sdk-dynamodbstreams+0_8",
	"aws-sdk-dynamodbstreams+0_9",
	"aws-sdk-dynamodbstreams+0_10",
]

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
