[package]
name = "serde_dynamo"
version = "4.2.12"
authors = ["Bryan Burgers <bryan@burgers.io>"]
edition = "2021"
license = "MIT"
description = "serde serializer/deserializer for DynamoDB items that supports aws-sdk-dynamodb, aws_lambda_events, and rusoto_dynamodb"
readme = "README.md"
documentation = "https://docs.rs/serde_dynamo"
homepage = "https://github.com/zenlist/serde_dynamo"
repository = "https://github.com/zenlist/serde_dynamo"
keywords = ["serde", "aws-sdk", "rusoto", "dynamodb", "serde_dynamodb"]

[dependencies]
__aws_lambda_events_0_6 = { package = "aws_lambda_events", version = "0.6", default-features = false, features = ["dynamodb"], optional = true }
__aws_lambda_events_0_7 = { package = "aws_lambda_events", version = "0.7", default-features = false, features = ["dynamodb", "streams"], optional = true }
__aws_sdk_dynamodb_0_7 = { package = "aws-sdk-dynamodb", version = "0.7", default-features = false, optional = true }
__aws_sdk_dynamodb_0_8 = { package = "aws-sdk-dynamodb", version = "0.8", default-features = false, optional = true }
__aws_sdk_dynamodb_0_9 = { package = "aws-sdk-dynamodb", version = "0.9", default-features = false, optional = true }
__aws_sdk_dynamodb_0_10 = { package = "aws-sdk-dynamodb", version = "0.10", default-features = false, optional = true }
__aws_sdk_dynamodb_0_11 = { package = "aws-sdk-dynamodb", version = "0.11", default-features = false, optional = true }
__aws_sdk_dynamodb_0_12 = { package = "aws-sdk-dynamodb", version = "0.12", default-features = false, optional = true }
__aws_sdk_dynamodb_0_13 = { package = "aws-sdk-dynamodb", version = "0.13", default-features = false, optional = true }
__aws_sdk_dynamodb_0_14 = { package = "aws-sdk-dynamodb", version = "0.14", default-features = false, optional = true }
__aws_sdk_dynamodb_0_15 = { package = "aws-sdk-dynamodb", version = "0.15", default-features = false, optional = true }
__aws_sdk_dynamodb_0_16 = { package = "aws-sdk-dynamodb", version = "0.16", default-features = false, optional = true }
__aws_sdk_dynamodb_0_17 = { package = "aws-sdk-dynamodb", version = "0.17", default-features = false, optional = true }
__aws_sdk_dynamodb_0_18 = { package = "aws-sdk-dynamodb", version = "0.18", default-features = false, optional = true }
__aws_sdk_dynamodb_0_19 = { package = "aws-sdk-dynamodb", version = "0.19", default-features = false, optional = true }
__aws_sdk_dynamodb_0_21 = { package = "aws-sdk-dynamodb", version = "0.21", default-features = false, optional = true }
__aws_sdk_dynamodb_0_22 = { package = "aws-sdk-dynamodb", version = "0.22", default-features = false, optional = true }
__aws_sdk_dynamodb_0_23 = { package = "aws-sdk-dynamodb", version = "0.23", default-features = false, optional = true }
__aws_sdk_dynamodb_0_24 = { package = "aws-sdk-dynamodb", version = "0.24", default-features = false, optional = true }
__aws_sdk_dynamodb_0_25 = { package = "aws-sdk-dynamodb", version = "0.25", default-features = false, optional = true }
__aws_sdk_dynamodb_0_26 = { package = "aws-sdk-dynamodb", version = "0.26", default-features = false, optional = true }
__aws_sdk_dynamodb_0_27 = { package = "aws-sdk-dynamodb", version = "0.27", default-features = false, optional = true }
__aws_sdk_dynamodb_0_28 = { package = "aws-sdk-dynamodb", version = "0.28", default-features = false, optional = true }
__aws_sdk_dynamodb_0_29 = { package = "aws-sdk-dynamodb", version = "0.29", default-features = false, optional = true }
__aws_sdk_dynamodb_0_30 = { package = "aws-sdk-dynamodb", version = "0.30", default-features = false, optional = true }
__aws_sdk_dynamodb_0_31 = { package = "aws-sdk-dynamodb", version = "0.31", default-features = false, optional = true }
__aws_sdk_dynamodb_0_32 = { package = "aws-sdk-dynamodb", version = "0.32", default-features = false, optional = true }
__aws_sdk_dynamodb_0_33 = { package = "aws-sdk-dynamodb", version = "0.33", default-features = false, optional = true }
__aws_sdk_dynamodb_0_34 = { package = "aws-sdk-dynamodb", version = "0.34", default-features = false, optional = true }
__aws_sdk_dynamodb_0_35 = { package = "aws-sdk-dynamodb", version = "0.35", default-features = false, optional = true }
__aws_sdk_dynamodb_0_36 = { package = "aws-sdk-dynamodb", version = "0.36", default-features = false, optional = true }
__aws_sdk_dynamodb_0_37 = { package = "aws-sdk-dynamodb", version = "0.37", default-features = false, optional = true }
__aws_sdk_dynamodb_0_38 = { package = "aws-sdk-dynamodb", version = "0.38", default-features = false, optional = true }
__aws_sdk_dynamodb_0_39 = { package = "aws-sdk-dynamodb", version = "0.39", default-features = false, optional = true }
__aws_sdk_dynamodb_1_2 = { package = "aws-sdk-dynamodb", version = "1.2.0", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_8 = { package = "aws-sdk-dynamodbstreams", version = "0.8", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_9 = { package = "aws-sdk-dynamodbstreams", version = "0.9", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_10 = { package = "aws-sdk-dynamodbstreams", version = "0.10", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_11 = { package = "aws-sdk-dynamodbstreams", version = "0.11", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_12 = { package = "aws-sdk-dynamodbstreams", version = "0.12", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_13 = { package = "aws-sdk-dynamodbstreams", version = "0.13", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_14 = { package = "aws-sdk-dynamodbstreams", version = "0.14", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_15 = { package = "aws-sdk-dynamodbstreams", version = "0.15", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_16 = { package = "aws-sdk-dynamodbstreams", version = "0.16", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_17 = { package = "aws-sdk-dynamodbstreams", version = "0.17", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_18 = { package = "aws-sdk-dynamodbstreams", version = "0.18", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_19 = { package = "aws-sdk-dynamodbstreams", version = "0.19", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_21 = { package = "aws-sdk-dynamodbstreams", version = "0.21", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_22 = { package = "aws-sdk-dynamodbstreams", version = "0.22", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_23 = { package = "aws-sdk-dynamodbstreams", version = "0.23", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_24 = { package = "aws-sdk-dynamodbstreams", version = "0.24", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_25 = { package = "aws-sdk-dynamodbstreams", version = "0.25", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_26 = { package = "aws-sdk-dynamodbstreams", version = "0.26", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_27 = { package = "aws-sdk-dynamodbstreams", version = "0.27", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_28 = { package = "aws-sdk-dynamodbstreams", version = "0.28", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_29 = { package = "aws-sdk-dynamodbstreams", version = "0.29", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_30 = { package = "aws-sdk-dynamodbstreams", version = "0.30", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_31 = { package = "aws-sdk-dynamodbstreams", version = "0.31", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_32 = { package = "aws-sdk-dynamodbstreams", version = "0.32", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_33 = { package = "aws-sdk-dynamodbstreams", version = "0.33", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_34 = { package = "aws-sdk-dynamodbstreams", version = "0.34", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_35 = { package = "aws-sdk-dynamodbstreams", version = "0.35", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_36 = { package = "aws-sdk-dynamodbstreams", version = "0.36", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_37 = { package = "aws-sdk-dynamodbstreams", version = "0.37", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_38 = { package = "aws-sdk-dynamodbstreams", version = "0.38", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_0_39 = { package = "aws-sdk-dynamodbstreams", version = "0.39", default-features = false, optional = true }
__aws_sdk_dynamodbstreams_1_2 = { package = "aws-sdk-dynamodbstreams", version = "1.2.0", default-features = false, optional = true }
__rusoto_dynamodb_0_46 = { package = "rusoto_dynamodb", version = "0.46", default-features = false, optional = true }
__rusoto_dynamodb_0_47 = { package = "rusoto_dynamodb", version = "0.47", default-features = false, optional = true }
__rusoto_dynamodb_0_48 = { package = "rusoto_dynamodb", version = "0.48", default-features = false, optional = true }
__rusoto_dynamodbstreams_0_46 = { package = "rusoto_dynamodbstreams", version = "0.46", default-features = false, optional = true }
__rusoto_dynamodbstreams_0_47 = { package = "rusoto_dynamodbstreams", version = "0.47", default-features = false, optional = true }
__rusoto_dynamodbstreams_0_48 = { package = "rusoto_dynamodbstreams", version = "0.48", default-features = false, optional = true }
base64 = "0.21.0"
serde = "1"

__rusoto_core_0_46_crate = { package = "rusoto_core", version = "0.46", default-features = false, features = ["rustls"], optional = true }
__rusoto_core_0_47_crate = { package = "rusoto_core", version = "0.47", default-features = false, features = ["rustls"], optional = true }
__rusoto_core_0_48_crate = { package = "rusoto_core", version = "0.48", default-features = false, features = ["rustls"], optional = true }

[features]
"aws_lambda_events+0_6" = ["__aws_lambda_events_0_6"]
"aws_lambda_events+0_7" = ["__aws_lambda_events_0_7"]
"aws-sdk-dynamodb+0_7" = ["__aws_sdk_dynamodb_0_7"]
"aws-sdk-dynamodb+0_8" = ["__aws_sdk_dynamodb_0_8"]
"aws-sdk-dynamodb+0_9" = ["__aws_sdk_dynamodb_0_9"]
"aws-sdk-dynamodb+0_10" = ["__aws_sdk_dynamodb_0_10"]
"aws-sdk-dynamodb+0_11" = ["__aws_sdk_dynamodb_0_11"]
"aws-sdk-dynamodb+0_12" = ["__aws_sdk_dynamodb_0_12"]
"aws-sdk-dynamodb+0_13" = ["__aws_sdk_dynamodb_0_13"]
"aws-sdk-dynamodb+0_14" = ["__aws_sdk_dynamodb_0_14"]
"aws-sdk-dynamodb+0_15" = ["__aws_sdk_dynamodb_0_15"]
"aws-sdk-dynamodb+0_16" = ["__aws_sdk_dynamodb_0_16"]
"aws-sdk-dynamodb+0_17" = ["__aws_sdk_dynamodb_0_17"]
"aws-sdk-dynamodb+0_18" = ["__aws_sdk_dynamodb_0_18"]
"aws-sdk-dynamodb+0_19" = ["__aws_sdk_dynamodb_0_19"]
"aws-sdk-dynamodb+0_21" = ["__aws_sdk_dynamodb_0_21"]
"aws-sdk-dynamodb+0_22" = ["__aws_sdk_dynamodb_0_22"]
"aws-sdk-dynamodb+0_23" = ["__aws_sdk_dynamodb_0_23"]
"aws-sdk-dynamodb+0_24" = ["__aws_sdk_dynamodb_0_24"]
"aws-sdk-dynamodb+0_25" = ["__aws_sdk_dynamodb_0_25"]
"aws-sdk-dynamodb+0_26" = ["__aws_sdk_dynamodb_0_26"]
"aws-sdk-dynamodb+0_27" = ["__aws_sdk_dynamodb_0_27"]
"aws-sdk-dynamodb+0_28" = ["__aws_sdk_dynamodb_0_28"]
"aws-sdk-dynamodb+0_29" = ["__aws_sdk_dynamodb_0_29"]
"aws-sdk-dynamodb+0_30" = ["__aws_sdk_dynamodb_0_30"]
"aws-sdk-dynamodb+0_31" = ["__aws_sdk_dynamodb_0_31"]
"aws-sdk-dynamodb+0_32" = ["__aws_sdk_dynamodb_0_32"]
"aws-sdk-dynamodb+0_33" = ["__aws_sdk_dynamodb_0_33"]
"aws-sdk-dynamodb+0_34" = ["__aws_sdk_dynamodb_0_34"]
"aws-sdk-dynamodb+0_35" = ["__aws_sdk_dynamodb_0_35"]
"aws-sdk-dynamodb+0_36" = ["__aws_sdk_dynamodb_0_36"]
"aws-sdk-dynamodb+0_37" = ["__aws_sdk_dynamodb_0_37"]
"aws-sdk-dynamodb+0_38" = ["__aws_sdk_dynamodb_0_38"]
"aws-sdk-dynamodb+0_39" = ["__aws_sdk_dynamodb_0_39"]
"aws-sdk-dynamodb+1_2" = ["__aws_sdk_dynamodb_1_2"]
"aws-sdk-dynamodbstreams+0_8" = ["__aws_sdk_dynamodbstreams_0_8"]
"aws-sdk-dynamodbstreams+0_9" = ["__aws_sdk_dynamodbstreams_0_9"]
"aws-sdk-dynamodbstreams+0_10" = ["__aws_sdk_dynamodbstreams_0_10"]
"aws-sdk-dynamodbstreams+0_11" = ["__aws_sdk_dynamodbstreams_0_11"]
"aws-sdk-dynamodbstreams+0_12" = ["__aws_sdk_dynamodbstreams_0_12"]
"aws-sdk-dynamodbstreams+0_13" = ["__aws_sdk_dynamodbstreams_0_13"]
"aws-sdk-dynamodbstreams+0_14" = ["__aws_sdk_dynamodbstreams_0_14"]
"aws-sdk-dynamodbstreams+0_15" = ["__aws_sdk_dynamodbstreams_0_15"]
"aws-sdk-dynamodbstreams+0_16" = ["__aws_sdk_dynamodbstreams_0_16"]
"aws-sdk-dynamodbstreams+0_17" = ["__aws_sdk_dynamodbstreams_0_17"]
"aws-sdk-dynamodbstreams+0_18" = ["__aws_sdk_dynamodbstreams_0_18"]
"aws-sdk-dynamodbstreams+0_19" = ["__aws_sdk_dynamodbstreams_0_19"]
"aws-sdk-dynamodbstreams+0_21" = ["__aws_sdk_dynamodbstreams_0_21"]
"aws-sdk-dynamodbstreams+0_22" = ["__aws_sdk_dynamodbstreams_0_22"]
"aws-sdk-dynamodbstreams+0_23" = ["__aws_sdk_dynamodbstreams_0_23"]
"aws-sdk-dynamodbstreams+0_24" = ["__aws_sdk_dynamodbstreams_0_24"]
"aws-sdk-dynamodbstreams+0_25" = ["__aws_sdk_dynamodbstreams_0_25"]
"aws-sdk-dynamodbstreams+0_26" = ["__aws_sdk_dynamodbstreams_0_26"]
"aws-sdk-dynamodbstreams+0_27" = ["__aws_sdk_dynamodbstreams_0_27"]
"aws-sdk-dynamodbstreams+0_28" = ["__aws_sdk_dynamodbstreams_0_28"]
"aws-sdk-dynamodbstreams+0_29" = ["__aws_sdk_dynamodbstreams_0_29"]
"aws-sdk-dynamodbstreams+0_30" = ["__aws_sdk_dynamodbstreams_0_30"]
"aws-sdk-dynamodbstreams+0_31" = ["__aws_sdk_dynamodbstreams_0_31"]
"aws-sdk-dynamodbstreams+0_32" = ["__aws_sdk_dynamodbstreams_0_32"]
"aws-sdk-dynamodbstreams+0_33" = ["__aws_sdk_dynamodbstreams_0_33"]
"aws-sdk-dynamodbstreams+0_34" = ["__aws_sdk_dynamodbstreams_0_34"]
"aws-sdk-dynamodbstreams+0_35" = ["__aws_sdk_dynamodbstreams_0_35"]
"aws-sdk-dynamodbstreams+0_36" = ["__aws_sdk_dynamodbstreams_0_36"]
"aws-sdk-dynamodbstreams+0_37" = ["__aws_sdk_dynamodbstreams_0_37"]
"aws-sdk-dynamodbstreams+0_38" = ["__aws_sdk_dynamodbstreams_0_38"]
"aws-sdk-dynamodbstreams+0_39" = ["__aws_sdk_dynamodbstreams_0_39"]
"aws-sdk-dynamodbstreams+1_2" = ["__aws_sdk_dynamodbstreams_1_2"]
"rusoto_dynamodb+0_46" = ["__rusoto_dynamodb_0_46"]
"rusoto_dynamodb+0_47" = ["__rusoto_dynamodb_0_47"]
"rusoto_dynamodb+0_48" = ["__rusoto_dynamodb_0_48"]
"rusoto_dynamodbstreams+0_46" = ["__rusoto_dynamodbstreams_0_46"]
"rusoto_dynamodbstreams+0_47" = ["__rusoto_dynamodbstreams_0_47"]
"rusoto_dynamodbstreams+0_48" = ["__rusoto_dynamodbstreams_0_48"]

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
